# proyecto_surebets

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/sports_arb/: config.py  main.py
src/sports_arb/application/: scan_use_case.py
src/sports_arb/domain/: arbitrage.py  models.py  ports.py
src/sports_arb/infrastructure/notifiers/: telegram_notifier.py
src/sports_arb/infrastructure/providers/: mock_provider.py  oddspapi_provider.py  scraper_provider.py  the_odds_api.py
src/sports_arb/infrastructure/web/: app.py  server.py
src/sports_arb/infrastructure/web/static/: app.js  index.html  style.css
tests/: test_arbitrage.py  test_mock_provider.py  test_scan_use_case.py
